Update bio and statement to use markdown

--- a/statement/index.html
+++ b/statement/index.html
@@ -37,37 +37,29 @@
     <div class="rightImage"><img src="../assets/img/insatiable.png"></div>
     <div class="body-container bio">
       <div class="bio-container">
-        <h1>Artist Statement</h1>
-        <p>
-          I respect art that challenges. I appreciate when choreographers challenge their dancers, peers, 
-          and audiences. I work to challenge myself and to challenge existing paradigms – 
-          both within and beyond dance. I constantly seek out the new, exploring things that 
-          I have never done before and things that no one has ever done before. 
-          I admire people who can change my mind and I enjoy having my mind changed 
-          because it indicates that I have learned something. I admire art that dissatisfies 
-          or irritates its audiences because great art has the capacity to do more than simply please all people.
-        </p>
-        <p>
-          I am interested in witnessing – and participating in – sincerity and honesty onstage. I admire dancers 
-          who can simply <i>be</i> and <i>do</i> during performance rather than those who simulate or put on anything 
-          artificial. In order to portray an emotion or a sensation, I enter a scenario in which I truly 
-          feel the emotion or sensation. Instead of pretending to feel something, I am able to actually 
-          experience it and whatever movement results is therefore entirely genuine.
-        </p>
-        <p>
-          As a choreographer, I am interested in turning the stage into a world in which dancers can exist. 
-          I value diversity and individuality among a group of performers. I am drawn to artists with 
-          distinctive voices and I respect my dancers as individuals with their own wealth of experiences. 
-          Accordingly, I value unison of intent among a group of performers more than I value perfect physical unison.
-        </p>
-        <p>
-          I create work in order to share my ideas with other people. I do not aim to please or to displease 
-          my audiences; I want merely to expose them to my ideas and be a witness to their reactions. 
-          I strive to interact with audiences through my work. However, I often find it difficult to 
-          communicate ideas about my choreography via spoken or written language. Dance is capable of 
-          expressing different things than words can, and I do not attempt to impose the confines of 
-          language upon dance. Thus, I usually let my work speak for itself.
-        </p>
+        <h1>Artist Statement</h1><p>I respect art that challenges. I appreciate when choreographers challenge their dancers, peers,
+and audiences. I work to challenge myself and to challenge existing paradigms –
+both within and beyond dance. I constantly seek out the new, exploring things that
+I have never done before and things that no one has ever done before.
+I admire people who can change my mind and I enjoy having my mind changed
+because it indicates that I have learned something. I admire art that dissatisfies
+or irritates its audiences because great art has the capacity to do more than simply please all people.</p>
+<p>I am interested in witnessing – and participating in – sincerity and honesty onstage. I admire dancers
+who can simply &lt;i&gt;be&lt;/i&gt; and &lt;i&gt;do&lt;/i&gt; during performance rather than those who simulate or put on anything
+artificial. In order to portray an emotion or a sensation, I enter a scenario in which I truly
+feel the emotion or sensation. Instead of pretending to feel something, I am able to actually
+experience it and whatever movement results is therefore entirely genuine.</p>
+<p>As a choreographer, I am interested in turning the stage into a world in which dancers can exist.
+I value diversity and individuality among a group of performers. I am drawn to artists with
+distinctive voices and I respect my dancers as individuals with their own wealth of experiences.
+Accordingly, I value unison of intent among a group of performers more than I value perfect physical unison.</p>
+<p>I create work in order to share my ideas with other people. I do not aim to please or to displease
+my audiences; I want merely to expose them to my ideas and be a witness to their reactions.
+I strive to interact with audiences through my work. However, I often find it difficult to
+communicate ideas about my choreography via spoken or written language. Dance is capable of
+expressing different things than words can, and I do not attempt to impose the confines of
+language upon dance. Thus, I usually let my work speak for itself.</p>
+
       </div>
       <p class="credits">
         Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
