--- a/video/index.html
+++ b/video/index.html
@@ -42,7 +42,7 @@
         <div class="prev">&lt;</div>
         <div class="next">&gt;</div>
         <div class="carousel">
-          <div class="card" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Restaged by Bliss Kohlmyer&lt;br&gt;Choreographed by Robert Moses&lt;/small">
+          <div class="card" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreographed by Robert Moses&lt;br&gt;Restaged by Bliss Kohlmyer&lt;/small">
             <iframe src="https://www.youtube.com/embed/e1rxVNvJTJQ?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="card" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;small&gt;&lt;br&gt;2014&lt;br&gt;Choreographed by Carl Flink&lt;/small&gt;">
