--- a/statement/index.html
+++ b/statement/index.html
@@ -36,8 +36,8 @@
     <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/3.png"></a></div>
     <div class="rightImage"><img src="../assets/img/insatiable.png"></div>
     <div class="body-container bio">
-      <div class="bio-container">
-        <h1>Artist Statement</h1><p>I respect art that challenges. I appreciate when choreographers challenge their dancers, peers,
+      <div class="bio-container statement-container">
+        <h1>Artist Statement</h1><p>&quot;I respect art that challenges. I appreciate when choreographers challenge their dancers, peers,
 and audiences. I work to challenge myself and to challenge existing paradigms –
 both within and beyond dance. I constantly seek out the new, exploring things that
 I have never done before and things that no one has ever done before.
@@ -45,7 +45,7 @@ I admire people who can change my mind and I enjoy having my mind changed
 because it indicates that I have learned something. I admire art that dissatisfies
 or irritates its audiences because great art has the capacity to do more than simply please all people.</p>
 <p>I am interested in witnessing – and participating in – sincerity and honesty onstage. I admire dancers
-who can simply &lt;i&gt;be&lt;/i&gt; and &lt;i&gt;do&lt;/i&gt; during performance rather than those who simulate or put on anything
+who can simply <em>be</em> and <em>do</em> during performance rather than those who simulate or put on anything
 artificial. In order to portray an emotion or a sensation, I enter a scenario in which I truly
 feel the emotion or sensation. Instead of pretending to feel something, I am able to actually
 experience it and whatever movement results is therefore entirely genuine.</p>
@@ -58,7 +58,8 @@ my audiences; I want merely to expose them to my ideas and be a witness to their
 I strive to interact with audiences through my work. However, I often find it difficult to
 communicate ideas about my choreography via spoken or written language. Dance is capable of
 expressing different things than words can, and I do not attempt to impose the confines of
-language upon dance. Thus, I usually let my work speak for itself.</p>
+language upon dance. Thus, I usually let my work speak for itself.&quot;</p>
+<p><code>-</code> Emily Hansel</p>
 
       </div>
       <p class="credits">
