--- a/statement/index.html
+++ b/statement/index.html
@@ -59,7 +59,7 @@ I strive to interact with audiences through my work. However, I often find it di
 communicate ideas about my choreography via spoken or written language. Dance is capable of
 expressing different things than words can, and I do not attempt to impose the confines of
 language upon dance. Thus, I usually let my work speak for itself.&quot;</p>
-<p><code>-</code> Emily Hansel</p>
+<p>— Emily Hansel</p>
 
       </div>
       <p class="credits">
