--- a/choreography/index.html
+++ b/choreography/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Emily Hansel">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://emilyhansel.me">
-    <meta property="og:image" content="/assets/img/facebook.png">
+    <meta property="og:image" content="/assets/img/facebook.PNG">
     <title>Emily Hansel | Choreography</title>
     <link rel="stylesheet" href="../assets/css/index.css">
   </head>
