--- a/video/index.html
+++ b/video/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Emily Hansel">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://emilyhansel.me">
-    <meta property="og:image" content="/assets/img/facebook.PNG">
+    <meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG">
     <title>Emily Hansel | Media</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
     <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon">
