fix menu bug Zack found

--- a/choreography/index.html
+++ b/choreography/index.html
@@ -1,175 +1,38 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/assets/img/favicon2.ico">
-    <link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon">
-    <meta property="og:title" content="Emily Hansel">
-    <meta property="og:description" content="dancer | choreographer">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="http://emilyhansel.me">
-    <meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG">
-    <title>Emily Hansel | Choreography</title>
-    <link rel="stylesheet" href="../assets/css/index.css">
-  </head>
-  <body>
-    <div class="nav-opener"><i class="ion-navicon"></i></div>
-    <div class="mobile-nav">
-      <div class="nav-items">
-        <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
-        <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
-        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
-        <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
-        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
-        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
-        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
-        <div class="nav-item"><span class="contact">contact</span></div>
-      </div>
-    </div>
-    <div class="contact-form"><span>x</span>
-      <form method="POST" action="http://formspree.io/emilylhansel@gmail.com">
-        <p>Fill out the form below to contact me</p>
-        <input tabindex="1" type="text" name="name" placeholder="Name">
-        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
-        <input class="email-send" tabindex="4" type="submit" value="Send">
-      </form>
-    </div>
-    <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/2.png"></a></div>
-    <div class="choreo">
-      <div class="choreo-container">
-        <h1>Choreography</h1>
-        <div class="choreo-box">
-          <div class="copy">
-            <h4>untitled_37.txt</h4>
-            <h6>(2016)</h6>
-            <p>
-              Choreographed and performed by Emily Hansel<br>
-              Computer program by Michael Fix
-            </p>
-            <p>
-              <i>untitled_37.txt</i> was the culmination of over a year’s worth of
-              research on the subjectivity of language. Words are not equivalent
-              to ideas, they simply represent ideas. Words attempt to
-              accurately portray the abstract in a concrete manner. The research
-              developed into an exploration of the human need to make the abstract tangible.
-            </p>
-            <p>
-              <i>untitled_37.txt</i> premiered on April 27, 2016 at the
-              University of South Florida. This piece was the fruit of Emily’s
-              <a href="/assets/thesis.pdf" target="_blank" alt="Honors Thesis">Honors Thesis</a>
-              for the Honors College at USF.
-            </p>
-          </div>
-          <iframe class="visual" src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;amp;showinfo=0" height="240px" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="choreo-box">
-          <div class="copy">
-            <h4>No Reason</h4>
-            <h6>(2015)</h6>
-            <p>
-              Choreographed by Emily Hansel for five dancers<br>
-              Music by Ratatat
-            </p>
-            <p>A piece in which there is a reason for everything. An environment in which five movers exist and discover.</p>
-            <p>
-              <i>No Reason</i> premiered at the University of South Florida’s
-              Theatre One in December 2015.  It was later selected to be presented
-              at the Southeast ACDA Conference in March 2016.
-              
-            </p>
-          </div><img class="visual" src="../assets/img/choreo/noreason.png" alt="No Reason">
-        </div>
-        <div class="choreo-box">
-          <div class="copy">
-            <h4>Vertical Words</h4>
-            <h6>(2015)</h6>
-            <p>Choreographed and performed by Emily Hansel at Micadanses in Paris.</p>
-            <p>
-              <i>Vertical Words</i> is an attempt to prove that the perception of meaning is
-              inevitable, regardless of whether or not the artist intended any meaning. The
-              choreographic process was inspired by the "word sculptures" of minimalist sculptor, Carl Andre.
-            </p>
-          </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="choreo-box">
-          <div class="copy">
-            <h4>Not Empty</h4>
-            <h6>(2015)</h6>
-            <p>Choreographed, performed, and directed by Emily Hansel.</p>
-            <p>
-              This film is a response to a performance of Angelin Preljocaj's "Empty Moves"
-              (performed by Ballet Preljocaj). The show's program notes included this statement:
-            </p>
-            <p>
-              “To highlight his process [Preljocaj] turns to John Cage’s "Empty Words," a
-              random string of phonemes, read by Cage during his performance in Milan – a
-              demonstrative act to show that the abstract exists and that it is unbearable
-              to the audience who responds by jeering at the unperturbed performer….[Preljocaj's
-              four dancers onstage] are paid homage by an audience, who although not
-              necessarily willing to listen, has at least agreed to look upon abstraction.”
-            </p>
-            <p>
-              John Cage and his partner Merce Cunningham were two artists who refused to seduce
-              audiences through romanticism, narrative, or encoded meanings. They often referred
-              to their work as "meaningless" or "purposeless." But this attempt to signify nothing
-              signifies something. The attempt to remove purpose is a purpose itself.
-            </p>
-          </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="choreo-box">
-          <div class="copy">
-            <h4>Insatiable</h4>
-            <h6>(2015)</h6>
-            <p>Choreographed and performed by Emily Hansel and Jessica Zizzo.<br>Music by ltlp, additional audio from Patrick McCarty.</p>
-            <p>
-              Insatiable was created in 2015 at the University of South Florida. It is the product of an exploration
-              of the benefits and downfalls of selfishness and unceasing ambition – such persistence can lead to great
-              accomplishments as well as disasters. This includes an investigation of Plato and Aristotle’s ideas on
-              human appetite (or passion) versus reason (which allegedly governs the passions).
-            </p>
-            <p>
-              The piece was invited to be performed in a full-scale concert in USF's dance department
-              as well as other performances at USF. This successful partnership between these two
-              choreogrpahers has led to further collaboration. Right now, the two are in the process
-              of creating an e-book which cohesively incorporates dance and poetry (with poetry by Patrick McCarty).
-            </p>
-          </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="choreo-box">
-          <div class="copy">
-            <h4>Scream</h4>
-            <h6>(2014)</h6>
-            <p>
-              Choreographed by Emily Hansel.<br>
-              Performed by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
-              Music by Philip Glass and Yo-Yo Ma.<br>
-            </p>
-            <p>Inspired by Edvard Munch's "The Scream."</p>
-          </div><img class="visual" src="../assets/img/choreo/scream.png" alt="Scream">
-        </div>
-      </div>
-      <p class="credits">
-        Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
-        Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a>
-      </p>
-    </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-83432320-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/index.js"></script>
-    <script>sessionStorage.seen = true;</script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream "><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" href="/assets/img/favicon2.ico"><link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon"><meta property="og:title" content="Emily Hansel"><meta property="og:description" content="dancer | choreographer"><meta property="og:type" content="website"><meta property="og:url" content="http://emilyhansel.me"><meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG"><title>Emily Hansel | Choreography</title><link rel="stylesheet" href="../assets/css/index.css"></head><body><div class="nav-opener"><i class="ion-navicon"></i></div><div class="mobile-nav"><div class="nav-items"><div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div><div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div><div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div><div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div><div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div><div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div><div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div><div class="nav-item"><span class="contact">contact</span></div></div></div><div class="contact-form"><span>x</span><form method="POST" action="http://formspree.io/emilylhansel@gmail.com"><p>Fill out the form below to contact me</p><input tabindex="1" type="text" name="name" placeholder="Name"><input tabindex="2" type="email" name="_replyto" placeholder="Email"><textarea tabindex="3" name="message" placeholder="Type your message here"></textarea><input class="email-send" tabindex="4" type="submit" value="Send"></form></div><div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/2.png"></a></div><div class="choreo"><div class="choreo-container"><h1>Choreography</h1><div class="choreo-box"><div class="copy"><h4>untitled_37.txt</h4><h6>(2016)</h6><p>Choreographed and performed by Emily Hansel<br>
+Computer program by Michael Fix</p><p><i>untitled_37.txt</i> was the culmination of over a year’s worth of
+research on the subjectivity of language. Words are not equivalent
+to ideas, they simply represent ideas. Words attempt to
+accurately portray the abstract in a concrete manner. The research
+developed into an exploration of the human need to make the abstract tangible.</p><p><i>untitled_37.txt</i> premiered on April 27, 2016 at the
+University of South Florida. This piece was the fruit of Emily’s
+<a href="/assets/thesis.pdf" target="_blank" alt="Honors Thesis">Honors Thesis</a>
+for the Honors College at USF.</p></div><iframe class="visual" src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;amp;showinfo=0" height="240px" frameborder="0" allowfullscreen></iframe></div><div class="choreo-box"><div class="copy"><h4>No Reason</h4><h6>(2015)</h6><p>Choreographed by Emily Hansel for five dancers<br>
+Music by Ratatat</p><p>A piece in which there is a reason for everything. An environment in which five movers exist and discover.</p><p><i>No Reason</i> premiered at the University of South Florida’s
+Theatre One in December 2015.  It was later selected to be presented
+at the Southeast ACDA Conference in March 2016.
+</p></div><img class="visual" src="../assets/img/choreo/noreason.png" alt="No Reason"></div><div class="choreo-box"><div class="copy"><h4>Vertical Words</h4><h6>(2015)</h6><p>Choreographed and performed by Emily Hansel at Micadanses in Paris.</p><p><i>Vertical Words</i> is an attempt to prove that the perception of meaning is
+inevitable, regardless of whether or not the artist intended any meaning. The
+choreographic process was inspired by the "word sculptures" of minimalist sculptor, Carl Andre.</p></div><iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div><div class="choreo-box"><div class="copy"><h4>Not Empty</h4><h6>(2015)</h6><p>Choreographed, performed, and directed by Emily Hansel.</p><p>This film is a response to a performance of Angelin Preljocaj's "Empty Moves"
+(performed by Ballet Preljocaj). The show's program notes included this statement:</p><p>“To highlight his process [Preljocaj] turns to John Cage’s "Empty Words," a
+random string of phonemes, read by Cage during his performance in Milan – a
+demonstrative act to show that the abstract exists and that it is unbearable
+to the audience who responds by jeering at the unperturbed performer….[Preljocaj's
+four dancers onstage] are paid homage by an audience, who although not
+necessarily willing to listen, has at least agreed to look upon abstraction.”</p><p>John Cage and his partner Merce Cunningham were two artists who refused to seduce
+audiences through romanticism, narrative, or encoded meanings. They often referred
+to their work as "meaningless" or "purposeless." But this attempt to signify nothing
+signifies something. The attempt to remove purpose is a purpose itself.</p></div><iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div><div class="choreo-box"><div class="copy"><h4>Insatiable</h4><h6>(2015)</h6><p>Choreographed and performed by Emily Hansel and Jessica Zizzo.<br>Music by ltlp, additional audio from Patrick McCarty.</p><p>Insatiable was created in 2015 at the University of South Florida. It is the product of an exploration
+of the benefits and downfalls of selfishness and unceasing ambition – such persistence can lead to great
+accomplishments as well as disasters. This includes an investigation of Plato and Aristotle’s ideas on
+human appetite (or passion) versus reason (which allegedly governs the passions).</p><p>The piece was invited to be performed in a full-scale concert in USF's dance department
+as well as other performances at USF. This successful partnership between these two
+choreogrpahers has led to further collaboration. Right now, the two are in the process
+of creating an e-book which cohesively incorporates dance and poetry (with poetry by Patrick McCarty).</p></div><iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div><div class="choreo-box"><div class="copy"><h4>Scream</h4><h6>(2014)</h6><p>Choreographed by Emily Hansel.<br>
+Performed by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
+Music by Philip Glass and Yo-Yo Ma.<br></p><p>Inspired by Edvard Munch's "The Scream."</p></div><img class="visual" src="../assets/img/choreo/scream.png" alt="Scream"></div></div><p class="credits">Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
+Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a></p></div><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-83432320-1', 'auto');
+ga('send', 'pageview');</script><script src="/assets/js/jquery.js"></script><script src="/assets/js/index.js"></script><script>sessionStorage.seen = true;</script></body></html>
