--- a/photo/index.html
+++ b/photo/index.html
@@ -1,66 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/assets/img/favicon2.ico">
-    <link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon">
-    <meta property="og:title" content="Emily Hansel">
-    <meta property="og:description" content="dancer | choreographer">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="http://emilyhansel.me">
-    <meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG">
-    <title>Emily Hansel | Media</title>
-    <link rel="stylesheet" href="../assets/css/index.css">
-  </head>
-  <body>
-    <div class="nav-opener"><i class="ion-navicon"></i></div>
-    <div class="mobile-nav">
-      <div class="nav-items">
-        <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
-        <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
-        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
-        <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
-        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
-        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
-        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
-        <div class="nav-item"><span class="contact">contact</span></div>
-      </div>
-    </div>
-    <div class="contact-form"><span>x</span>
-      <form method="POST" action="http://formspree.io/emilylhansel@gmail.com">
-        <p>Fill out the form below to contact me</p>
-        <input tabindex="1" type="text" name="name" placeholder="Name">
-        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
-        <input class="email-send" tabindex="4" type="submit" value="Send">
-      </form>
-    </div>
-    <div class="media">
-      <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/4.png"></a></div>
-      <h1 id="photo">Photo</h1>
-      <div class="media-container photo-container">
-        <div class="prev">&lt;</div>
-        <div class="next">&gt;</div>
-        <div class="carousel"><img src="../assets/img/dancing/carousel/1.jpg" height="200px" data-caption="&lt;small&gt;2016&lt;br&gt;Photograph by Jason Lam&lt;/small&gt;"><img src="../assets/img/dancing/carousel/2.jpg" height="200px" data-caption="&lt;i&gt;Threshold&lt;/i&gt;&lt;small&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photograph by Kyle Scharf&lt;/small&gt;"><img src="../assets/img/dancing/carousel/3.jpg" height="200px" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;small&gt;&lt;br&gt;2014&lt;br&gt;Choreography by Carl Flink&lt;br&gt;Photograph by Tiffany Schrepferman&lt;/small&gt;"><img src="../assets/img/dancing/carousel/4.jpg" height="200px" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Robert Moses&lt;br&gt;Photograph by Kyle Scharf&lt;/small&gt;"><img src="../assets/img/dancing/carousel/5.jpg" height="200px" data-caption="&lt;i&gt;Fingerprints&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Paula Nunez&lt;br&gt;Photograph by Kyle Scharf&lt;/small&gt;"><img src="../assets/img/dancing/carousel/6.jpg" height="200px" data-caption="&lt;i&gt;If this continues…&lt;/i&gt;&lt;small&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alyssa Marchand&lt;br&gt;Photograph by Candace Kaw&lt;/small&gt;"><img src="../assets/img/dancing/carousel/7.jpg" height="200px" data-caption="&lt;i&gt;KOTO&lt;/i&gt;&lt;small&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alonzo King&lt;br&gt;Photrograph by Kyle Scharf&lt;/small&gt;"><img src="../assets/img/dancing/carousel/8.jpg" height="200px" data-caption="&lt;i&gt;Picture in a Frame&lt;/i&gt;&lt;small&gt;&lt;br&gt;2013&lt;br&gt;Choreography by Bliss Kohlmyer&lt;br&gt;Photograph by Candace Kaw&lt;/small&gt;"><img src="../assets/img/dancing/carousel/9.jpg" height="200px" data-caption="&lt;i&gt;3:00am&lt;/i&gt;&lt;small&gt;&lt;br&gt;2014/2016&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photograph by Candace Kaw/Soho Images&lt;/small&gt;"></div>
-        <div class="caption"></div>
-      </div>
-    </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-83432320-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/index.js"></script>
-    <script src="../assets/js/jquery.js"></script>
-    <script src="../assets/js/jquery.mousewheel.min.js"></script>
-    <script src="../assets/js/carousel.js"></script>
-    <script>sessionStorage.seen = true;</script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream "><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" href="/assets/img/favicon2.ico"><link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon"><meta property="og:title" content="Emily Hansel"><meta property="og:description" content="dancer | choreographer"><meta property="og:type" content="website"><meta property="og:url" content="http://emilyhansel.me"><meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG"><title>Emily Hansel | Media</title><link rel="stylesheet" href="../assets/css/index.css"></head><body><div class="nav-opener"><i class="ion-navicon"></i></div><div class="mobile-nav"><div class="nav-items"><div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div><div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div><div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div><div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div><div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div><div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div><div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div><div class="nav-item"><span class="contact">contact</span></div></div></div><div class="contact-form"><span>x</span><form method="POST" action="http://formspree.io/emilylhansel@gmail.com"><p>Fill out the form below to contact me</p><input tabindex="1" type="text" name="name" placeholder="Name"><input tabindex="2" type="email" name="_replyto" placeholder="Email"><textarea tabindex="3" name="message" placeholder="Type your message here"></textarea><input class="email-send" tabindex="4" type="submit" value="Send"></form></div><div class="media"><div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/4.png"></a></div><h1 id="photo">Photo</h1><div class="media-container photo-container"><div class="prev">&lt;</div><div class="next">&gt;</div><div class="carousel"><img src="../assets/img/dancing/carousel/1.jpg" height="200px" data-caption="&lt;small&gt;2016&lt;br&gt;Photograph by Jason Lam&lt;/small&gt;"><img src="../assets/img/dancing/carousel/2.jpg" height="200px" data-caption="&lt;i&gt;Threshold&lt;/i&gt;&lt;small&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photograph by Kyle Scharf&lt;/small&gt;"><img src="../assets/img/dancing/carousel/3.jpg" height="200px" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;small&gt;&lt;br&gt;2014&lt;br&gt;Choreography by Carl Flink&lt;br&gt;Photograph by Tiffany Schrepferman&lt;/small&gt;"><img src="../assets/img/dancing/carousel/4.jpg" height="200px" data-caption="&lt;i&gt;Cause&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Robert Moses&lt;br&gt;Photograph by Kyle Scharf&lt;/small&gt;"><img src="../assets/img/dancing/carousel/5.jpg" height="200px" data-caption="&lt;i&gt;Fingerprints&lt;/i&gt;&lt;small&gt;&lt;br&gt;2016&lt;br&gt;Choreography by Paula Nunez&lt;br&gt;Photograph by Kyle Scharf&lt;/small&gt;"><img src="../assets/img/dancing/carousel/6.jpg" height="200px" data-caption="&lt;i&gt;If this continues…&lt;/i&gt;&lt;small&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alyssa Marchand&lt;br&gt;Photograph by Candace Kaw&lt;/small&gt;"><img src="../assets/img/dancing/carousel/7.jpg" height="200px" data-caption="&lt;i&gt;KOTO&lt;/i&gt;&lt;small&gt;&lt;br&gt;2015&lt;br&gt;Choreography by Alonzo King&lt;br&gt;Photrograph by Kyle Scharf&lt;/small&gt;"><img src="../assets/img/dancing/carousel/8.jpg" height="200px" data-caption="&lt;i&gt;Picture in a Frame&lt;/i&gt;&lt;small&gt;&lt;br&gt;2013&lt;br&gt;Choreography by Bliss Kohlmyer&lt;br&gt;Photograph by Candace Kaw&lt;/small&gt;"><img src="../assets/img/dancing/carousel/9.jpg" height="200px" data-caption="&lt;i&gt;3:00am&lt;/i&gt;&lt;small&gt;&lt;br&gt;2014/2016&lt;br&gt;Choreography by Andrew Carroll&lt;br&gt;Photograph by Candace Kaw/Soho Images&lt;/small&gt;"></div><div class="caption"></div></div></div><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-83432320-1', 'auto');
+ga('send', 'pageview');</script><script src="/assets/js/jquery.js"></script><script src="/assets/js/index.js"></script><script src="../assets/js/jquery.js"></script><script src="../assets/js/jquery.mousewheel.min.js"></script><script src="../assets/js/carousel.js"></script><script>sessionStorage.seen = true;</script></body></html>
