--- a/choreography/index.html
+++ b/choreography/index.html
@@ -44,6 +44,21 @@
         <h1>Choreography</h1>
         <div class="choreo-box">
           <div class="copy">
+            <h4>Scale</h4>
+            <h6>(2017)</h6>
+            <p>
+              Choreographed by Emily Hansel<br>
+              Performed by Rachel Berryman, Malia Byrne, Katie House, and Nick Wagner
+            </p>
+            <p>
+              <i>Scale</i> was presented by the Young Choreographers' Forum SF at
+              the Joe Goode Annex in March, 2017.
+            </p>
+          </div>
+          <iframe class="visual" src="https://www.youtube.com/embed/RomHWxPiTZU?rel=0&amp;amp;showinfo=0" height="240px" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="choreo-box">
+          <div class="copy">
             <h4>untitled_37.txt</h4>
             <h6>(2016)</h6>
             <p>
@@ -72,14 +87,16 @@
             <h6>(2015)</h6>
             <p>
               Choreographed by Emily Hansel for five dancers<br>
-              Music by Ratatat
+              Music by Ratatat<br>
+              Originally performed by Natalie Bohin, Katie Kulasa, Raven Moore, Brent Townend, and Demetrius Tucker
             </p>
             <p>A piece in which there is a reason for everything. An environment in which five movers exist and discover.</p>
             <p>
               <i>No Reason</i> premiered at the University of South Florida’s
-              Theatre One in December 2015.  It was later selected to be presented
-              at the Southeast ACDA Conference in March 2016.
-              
+              Theatre One in December 2015.  It was later selected to be presented at
+              the 2016 Southeast ACDA Conference, where it received rave
+              reviews from the adjudicators for its originality as a
+              “sophisticated fusion of dance theater, improvisation, and contemporary movement.”
             </p>
           </div><img class="visual" src="../assets/img/choreo/noreason.png" alt="No Reason">
         </div>
@@ -126,18 +143,19 @@
           <div class="copy">
             <h4>Insatiable</h4>
             <h6>(2015)</h6>
-            <p>Choreographed and performed by Emily Hansel and Jessica Zizzo.<br>Music by ltlp, additional audio from Patrick McCarty.</p>
             <p>
-              Insatiable was created in 2015 at the University of South Florida. It is the product of an exploration
-              of the benefits and downfalls of selfishness and unceasing ambition – such persistence can lead to great
-              accomplishments as well as disasters. This includes an investigation of Plato and Aristotle’s ideas on
-              human appetite (or passion) versus reason (which allegedly governs the passions).
+              Choreographed and performed by Emily Hansel and Jessica Zizzo.<br>
+              Music by ltlp, additional audio from Patrick McCarty.
             </p>
             <p>
-              The piece was invited to be performed in a full-scale concert in USF's dance department
-              as well as other performances at USF. This successful partnership between these two
-              choreogrpahers has led to further collaboration. Right now, the two are in the process
-              of creating an e-book which cohesively incorporates dance and poetry (with poetry by Patrick McCarty).
+              <i>Insatiable</i> was created in 2015 at the University of South Florida.
+              It is the product of an exploration of the benefits and downfalls
+              of selfishness and unceasing ambition – such persistence can lead
+              to great accomplishments as well as disasters. This includes
+              an investigation of Plato and Aristotle’s ideas on human
+              appetite (or passion) versus reason (which governs the passions).
+              The piece was invited to be performed in a full-scale concert
+              in USF's dance department as well as other performances at USF.
             </p>
           </div>
           <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
