--- a/pug/_main_template.html
+++ b/pug/_main_template.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="Emily Hansel">
     <meta property="og:description" content="dancer | choreographer">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://emilyhansel.me">
-    <meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG">
+    <meta property="og:url" content="https://emilyhansel.me">
+    <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
   </head>
   <body>
     <div class="nav-opener"><i class="ion-navicon"></i></div>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="contact-form"><span>x</span>
-      <form method="POST" action="http://formspree.io/emilylhansel@gmail.com">
+      <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
         <p>Fill out the form below to contact me</p>
         <input tabindex="1" type="text" name="name" placeholder="Name">
         <input tabindex="2" type="email" name="_replyto" placeholder="Email">
