--- a/choreography/index.html
+++ b/choreography/index.html
@@ -44,6 +44,17 @@
         <h1>Choreography</h1>
         <div class="choreo-box">
           <div class="copy">
+            <h4>Vertical Words</h4>
+            <h6>(2018)</h6>
+            <p>
+              Choreographed by Emily Hansel<br>
+              Performed by Emily Hansel, Moses Kaplan, and Chelsea Reichert
+            </p>
+            <p><i>Vertical Words</i> was presented at CounterPulse in January, 2018. An abridged version was performed at LEVYsalon in April, 2018.</p>
+          </div><img class="visual" src="../assets/img/choreo/levysalon.jpg" alt="Vertical Words, performed at LEVYsalon">
+        </div>
+        <div class="choreo-box">
+          <div class="copy">
             <h4>Scale</h4>
             <h6>(2017)</h6>
             <p>
