--- a/video/index.html
+++ b/video/index.html
@@ -74,10 +74,10 @@
       ga('create', 'UA-83432320-1', 'auto');
       ga('send', 'pageview');
     </script>
-    <script src="/assets/js/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/assets/js/index.js"></script>
-    <script src="../assets/js/jquery.js"></script>
-    <script src="../assets/js/jquery.mousewheel.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
     <script src="../assets/js/carousel.js"></script>
     <script>sessionStorage.seen = true;</script>
   </body>
