--- a/choreography/index.html
+++ b/choreography/index.html
@@ -44,6 +44,15 @@
         <h1>Choreography</h1>
         <div class="choreo-box">
           <div class="copy">
+            <h4>PHANTOM</h4>
+            <h6>(2019)</h6>
+            <p>Directed, choreographed, and performed by Emily Hansel<br></p>
+            <p><i>PHANTOM</i> was developed during a residency at SAFEhouse Arts and premiered at SAFEhouse in January, 2019.</p>
+          </div>
+          <iframe class="visual" src="https://www.youtube.com/embed/uJ4H6y7Gza8?showinfo=0" height="240px" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="choreo-box">
+          <div class="copy">
             <h4>Vertical Words</h4>
             <h6>(2018)</h6>
             <p>
