Not empty: video -> img

--- a/choreography/index.html
+++ b/choreography/index.html
@@ -143,8 +143,7 @@
               to their work as "meaningless" or "purposeless." But this attempt to signify nothing
               signifies something. The attempt to remove purpose is a purpose itself.
             </p>
-          </div>
-          <iframe class="visual" width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div><img class="visual" src="../assets/img/not-empty.png" alt="Not Empty">
         </div>
         <div class="choreo-box">
           <div class="copy">
