new pages without borders

--- a/digital-art/index.html
+++ b/digital-art/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://emilyhansel.me">
     <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
-    <title>Emily Hansel | Artist Statement</title>
+    <title>Emily Hansel | Digital Art</title>
     <link rel="stylesheet" href="../assets/css/index.css">
   </head>
   <body>
@@ -38,21 +38,13 @@
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
-    <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/3.png"></a></div>
+    <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/3.png"></a></div>
     <div class="rightImage"><img src="../assets/img/insatiable.png"></div>
     <div class="body-container bio">
-      <div class="bio-container statement-container">
-        <h1>Artist Statement</h1><p>&quot;I respect art that challenges. I appreciate choreographers who challenge their dancers, peers, and audiences. I work to challenge myself and to challenge existing paradigms – both within and beyond dance. I admire people who can change my mind and enjoy having my mind changed.</p>
-<p>I am interested in witnessing – and participating in – sincerity and honesty onstage. I admire dancers who can simply be and do during performance rather than those who simulate or put on anything artificial. I push myself and my dancers to genuinely experience emotions and sensations in both performance and practice.</p>
-<p>As a choreographer, I am interested in turning the stage into a world in which dancers can exist. I value diversity and individuality among a group of performers. I am drawn to artists with distinctive voices and I respect my dancers as individuals with their own wealth of experiences. Accordingly, I value unison of intent among a group of performers more than I value perfect physical unison.</p>
-<p>I strive to interact with audiences through my work. However, I often find it difficult to communicate ideas about my choreography via spoken or written language. Dance is capable of expressing different things than language is, and I do not want to impose the confines of words upon dance, nor vice versa.&quot;</p>
-<p>— Emily Hansel</p>
-
+      <div class="bio-container digital-art-container">
+        <h1>Digital Art</h1><br><br><br>
+        <p class="no-animation">Coming soon</p>
       </div>
-      <p class="credits">
-        Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
-        Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a>
-      </p>
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
