--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div class="menu-item"><span class="menu-button">works</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/choreography" alt="choreography">choreography</a></li>
-            <li><a class="site-link" href="/statement" alt="artist statement">artist statement</a></li>
+            <li><a class="site-link" href="/digital-art" alt="digital art statement">digital art</a></li>
           </ul>
         </div>
-        <div class="menu-item"><span class="menu-button"> media</span>
+        <div class="menu-item"><span class="menu-button"> galleries</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/photo" alt="photo">photo</a></li>
             <li><a class="site-link" href="/video" alt="video">video</a></li>
