--- a/photo/index.html
+++ b/photo/index.html
@@ -39,7 +39,7 @@
       </form>
     </div>
     <div class="media">
-      <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/4.png"></a></div>
+      <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/4.png"></a></div>
       <h1 id="photo">Photo</h1>
       <div class="media-container photo-container">
         <div class="prev">&lt;</div>
