--- a/video/index.html
+++ b/video/index.html
@@ -41,7 +41,7 @@
       </form>
     </div>
     <div class="media">
-      <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/5.png"></a></div>
+      <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/5.png"></a></div>
       <h1 id="photo">Video</h1>
       <div class="media-container video-container">
         <div class="prev">&lt;</div>
