--- a/choreography/index.html
+++ b/choreography/index.html
@@ -38,7 +38,7 @@
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
-    <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/2.png"></a></div>
+    <div class="home-button"><a href="/" alt="Emily"><img class="flip" src="../assets/img/dancing/crop/2.png"></a></div>
     <div class="choreo">
       <div class="choreo-container">
         <h1>Choreography</h1>
