update pages with more borderless content

--- a/choreography/index.html
+++ b/choreography/index.html
@@ -31,10 +31,10 @@
     </div>
     <div class="contact-form"><span>x</span>
       <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
-        <p>Fill out the form below to contact me</p>
-        <input tabindex="1" type="text" name="name" placeholder="Name">
-        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
+        <p>Fill out the form below to contact Emily</p>
+        <input tabindex="1" type="text" name="name" placeholder="Name" required>
+        <input tabindex="2" type="email" name="_replyto" placeholder="Email" required>
+        <textarea tabindex="3" name="message" placeholder="Type your message here" required></textarea>
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
@@ -86,17 +86,11 @@
               Computer program by Michael Fix
             </p>
             <p>
-              <i>untitled_37.txt</i> was the culmination of over a year’s worth of
-              research on the subjectivity of language. Words are not equivalent
-              to ideas, they simply represent ideas. Words attempt to
-              accurately portray the abstract in a concrete manner. The research
-              developed into an exploration of the human need to make the abstract tangible.
-            </p>
-            <p>
               <i>untitled_37.txt</i> premiered on April 27, 2016 at the
               University of South Florida. This piece was the fruit of Emily’s
               <a href="/assets/thesis.pdf" target="_blank" alt="Honors Thesis">Honors Thesis</a>
-              for the Honors College at USF.
+              for the Honors College at USF. <i>untitled_37.txt</i> was the culmination of over a year’s worth of
+              research on the subjectivity of language.
             </p>
           </div>
           <iframe class="visual" src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;amp;showinfo=0" height="240px" frameborder="0" allowfullscreen></iframe>
@@ -110,7 +104,6 @@
               Music by Ratatat<br>
               Originally performed by Natalie Bohin, Katie Kulasa, Raven Moore, Brent Townend, and Demetrius Tucker
             </p>
-            <p>A piece in which there is a reason for everything. An environment in which five movers exist and discover.</p>
             <p>
               <i>No Reason</i> premiered at the University of South Florida’s
               Theatre One in December 2015.  It was later selected to be presented at
@@ -125,10 +118,6 @@
             <h4>Not Empty</h4>
             <h6>(2015)</h6>
             <p>Choreographed, performed, and directed by Emily Hansel.</p>
-            <p>
-              This film is a response to a performance of Angelin Preljocaj's "Empty Moves"
-              (performed by Ballet Preljocaj).
-            </p>
           </div><img class="visual" src="../assets/img/not-empty.png" alt="Not Empty">
         </div>
         <div class="choreo-box">
@@ -151,7 +140,6 @@
               Performed by Hannah Luckow, Alyssa Marchand, Robert Kelley, Hannah Mainellis, Monica Moneses, Cloe Leppard, and Dayne Davis.<br>
               Music by Philip Glass and Yo-Yo Ma.<br>
             </p>
-            <p>Inspired by Edvard Munch's "The Scream."</p>
           </div><img class="visual" src="../assets/img/choreo/scream.png" alt="Scream">
         </div>
       </div>
