--- a/video/index.html
+++ b/video/index.html
@@ -33,31 +33,29 @@
     </div>
     <div class="contact-form"><span>x</span>
       <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
-        <p>Fill out the form below to contact me</p>
-        <input tabindex="1" type="text" name="name" placeholder="Name">
-        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
+        <p>Fill out the form below to contact Emily</p>
+        <input tabindex="1" type="text" name="name" placeholder="Name" required>
+        <input tabindex="2" type="email" name="_replyto" placeholder="Email" required>
+        <textarea tabindex="3" name="message" placeholder="Type your message here" required></textarea>
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
     <div class="media">
       <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/5.png"></a></div>
-      <h1 id="photo">Video</h1>
-      <div class="media-container video-container">
-        <div class="prev">&lt;</div>
-        <div class="next">&gt;</div>
-        <div class="carousel">
-          <div class="card" data-caption="&lt;i&gt;PHANTOM&lt;/i&gt;&lt;small&gt;&lt;br&gt;2019&lt;br&gt;Directed, choreographed, and performed by Emily Hansel&lt;/small&gt;">
-            <iframe class="visual" src="https://www.youtube.com/embed/uJ4H6y7Gza8?showinfo=0" frameborder="0" allowfullscreen></iframe>
-          </div>
-          <div class="card" data-caption="&lt;i&gt;(dis)connect&lt;/i&gt;&lt;small&gt;&lt;br&gt;2017&lt;br&gt;Choreographed by Dylan Elmore&lt;/small&gt;">
-            <iframe src="https://www.youtube.com/embed/K7ND7d_9pXU?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-          </div>
-          <div class="card" data-caption="&lt;i&gt;Unkindness of Ravens&lt;/i&gt;&lt;small&gt;&lt;br&gt;2014&lt;br&gt;Choreographed by Carl Flink&lt;/small&gt;">
-            <iframe src="https://www.youtube.com/embed/sANlYpQEVgo?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-          </div>
+      <div class="video-container">
+        <h1>Video</h1>
+        <div class="card">
+          <iframe class="visual" src="https://www.youtube.com/embed/uJ4H6y7Gza8?showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div class="caption"></div>
+        <div class="caption"><i>PHANTOM (2019)</i><br><small>Directed, choreographed, and performed by Emily Hansel</small></div>
+        <div class="card">
+          <iframe src="https://www.youtube.com/embed/K7ND7d_9pXU?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="caption"><i>(dis)connect (2017)</i><br><small>Choreographed by Dylan Elmore</small></div>
+        <div class="card">
+          <iframe src="https://www.youtube.com/embed/sANlYpQEVgo?rel=0&amp;amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="caption"><i>Unkindness of Ravens (2014)</i><br><small>Choreographed by Carl Flink</small></div>
       </div>
     </div>
     <script>
@@ -72,7 +70,6 @@
     <script src="/assets/js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
-    <script src="../assets/js/carousel.js"></script>
     <script>sessionStorage.seen = true;</script>
   </body>
 </html>
