upgrade ionicons, include instagram link

--- a/pug/_main_template.html
+++ b/pug/_main_template.html
@@ -14,14 +14,16 @@
     <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
   </head>
   <body>
-    <div class="nav-opener"><i class="ion-navicon"></i></div>
+    <div class="nav-opener">
+      <ion-icon name="menu-outline"></ion-icon>
+    </div>
     <div class="mobile-nav">
       <div class="nav-items">
         <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
         <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
         <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
-        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
+        <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
         <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
         <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
         <div class="nav-item"><span class="contact">contact</span></div>
