--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
     <link rel="stylesheet" href="./assets/css/index.css">
   </head>
   <body>
-    <div class="nav-opener"><i class="ion-navicon"></i></div>
+    <div class="nav-opener">
+      <ion-icon name="menu-outline"></ion-icon>
+    </div>
     <div class="mobile-nav">
       <div class="nav-items">
         <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
         <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
         <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
-        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
+        <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
         <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
         <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
         <div class="nav-item"><span class="contact">contact</span></div>
@@ -62,6 +64,8 @@
           </ul>
         </div>
         <div class="menu-item"><span class="menu-button contact">contact</span></div>
+        <div class="menu-item"><span class="menu-button"><a href="https://www.instagram.com/em_hansel/" target="_blank" rel="noreferrer noopener">
+              <ion-icon name="logo-instagram"></ion-icon></a></span></div>
         <div class="dancing-image"></div>
       </ul>
     </div>
@@ -77,5 +81,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/assets/js/index.js"></script>
     <script src="./assets/js/app.js"></script>
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </body>
 </html>
